Fix Invite button misalignment

--- a/src/modules/dashboard/components/ColonyHome/ColonyMembers/ColonyMembers.css
+++ b/src/modules/dashboard/components/ColonyHome/ColonyMembers/ColonyMembers.css
@@ -77,6 +77,7 @@
 .heading {
   display: flex;
   align-items: center;
+  margin-bottom: 20px;
   gap: 8px;
 }
 
@@ -87,8 +88,4 @@
 
 .heading > span:first-child {
   margin-left: 0;
-}
-
-.inviteButton {
-  margin-bottom: 20px;
 }
